--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <!-- head start -->
     <header>
-
+      <h3>Influencer products</h3>
     </header>
     <!-- head end -->
     <main>
@@ -23,7 +23,7 @@
                     Influencer</h1>
                 <p>An Influencer can reach many people and influence them to like or dislike, to buy or skip buying, products and services. He is mostimportant figure in society.</p>
                <button> Preebook now
-                <i class="fas fa-directions new"></i>
+                <i class="fas fa-arrow-right new"></i>
                 </button>        
 
                 </div>
@@ -145,7 +145,18 @@
                     Buyers protection possible!</p>
             </div>
         </div>
+        <p class="see">see more<i class="fas fa-arrow-right"></i></p>
         </section>
+      <footer>
+          <div>
+              <h2>Influencer products</h2>
+              <h3>Copyright <i class="far fa-copyright"></i> 2020  influencer products</h3>
+              <h3>All rights reserved</h3>
+              <i class="fab fa-instagram"></i>
+              <i class="fab fa-twitter"></i>
+              <i class="fab fa-youtube-square"></i>
+          </div>
+      </footer>
     </main>
     
 </body>
