--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <section class="container">
             <div class="intro">
                
-                <div class="journey"><h1>Start your Journey as 
+                <div class="start"><h1>Start your Journey as 
                     Influencer</h1>
                 <p>An Influencer can reach many people and influence them to like or dislike, to buy or skip buying, products and services. He is mostimportant figure in society.</p>
                <button> Preebook now
@@ -45,7 +45,7 @@
                 <i class="fas fa-star filled"></i>
                 <i class="fas fa-star filled"></i>
                 <i class="fas fa-star filled"></i>4.99
-                <p>Wordwide shifting available
+                <p class="paragraph">Wordwide shifting available
                     Buyers protection possible!</p>
             </div>
             <div class="collection">
@@ -57,7 +57,7 @@
                 <i class="fas fa-star filled"></i>
                 <i class="fas fa-star filled"></i>
                 <i class="fas fa-star filled"></i>4.99
-                <p>Wordwide shifting available
+                <p class="paragraph">Wordwide shifting available
                     Buyers protection possible!</p>
             </div>
             <div class="collection">
@@ -69,7 +69,7 @@
                 <i class="fas fa-star filled"></i>
                 <i class="fas fa-star filled"></i>
                 <i class="fas fa-star filled"></i>4.99
-                <p>Wordwide shifting available
+                <p class="paragraph">Wordwide shifting available
                     Buyers protection possible!</p>
             </div>
             <div class="collection">
@@ -81,7 +81,7 @@
                 <i class="fas fa-star filled"></i>
                 <i class="fas fa-star filled"></i>
                 <i class="fas fa-star filled"></i>4.99
-                <p>Wordwide shifting available
+                <p class="paragraph">Wordwide shifting available
                     Buyers protection possible!</p>
             </div>
             <div class="collection">
@@ -93,7 +93,7 @@
                 <i class="fas fa-star filled"></i>
                 <i class="fas fa-star filled"></i>
                 <i class="fas fa-star filled"></i>4.99
-                <p>Wordwide shifting available
+                <p class="paragraph">Wordwide shifting available
                     Buyers protection possible!</p>
             </div>
             <div class="collection">
@@ -105,7 +105,7 @@
                 <i class="fas fa-star filled"></i>
                 <i class="fas fa-star filled"></i>
                 <i class="fas fa-star filled"></i>4.99
-                <p>Wordwide shifting available
+                <p class="paragraph">Wordwide shifting available
                     Buyers protection possible!</p>
             </div>     
             <div class="collection">
@@ -117,7 +117,7 @@
                 <i class="fas fa-star filled"></i>
                 <i class="fas fa-star filled"></i>
                 <i class="fas fa-star filled"></i>4.99
-                <p>Wordwide shifting available
+                <p class="paragraph">Wordwide shifting available
                     Buyers protection possible!</p>
             </div>
             <div class="collection">
@@ -129,7 +129,7 @@
                 <i class="fas fa-star filled"></i>
                 <i class="fas fa-star filled"></i>
                 <i class="fas fa-star filled"></i>4.99
-                <p>Wordwide shifting available
+                <p class="paragraph">Wordwide shifting available
                     Buyers protection possible!</p>
             </div>
             <div class="collection">
@@ -141,23 +141,23 @@
                 <i class="fas fa-star filled"></i>
                 <i class="fas fa-star filled"></i>
                 <i class="fas fa-star filled"></i>4.99
-                <p>Wordwide shifting available
+                <p class="paragraph">Wordwide shifting available
                     Buyers protection possible!</p>
             </div>
         </div>
         <p class="see">see more<i class="fas fa-arrow-right"></i></p>
         </section>
-      <footer>
-          <div>
+    </main>
+    <footer>
+           <div>
               <h2>Influencer products</h2>
               <h3>Copyright <i class="far fa-copyright"></i> 2020  influencer products</h3>
               <h3>All rights reserved</h3>
               <i class="fab fa-instagram"></i>
               <i class="fab fa-twitter"></i>
               <i class="fab fa-youtube-square"></i>
-          </div>
+           </div>
       </footer>
-    </main>
-    
+
 </body>
 </html>
