--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>influencer-gears</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/f7dc5c9231.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="myProjects/webProject/icofont/css/icofont.min.css">
+
 </head>
 <body>
     <!-- head start -->
@@ -22,12 +24,12 @@
                 <div class="start"><h1>Start your Journey as 
                     Influencer</h1>
                 <p>An Influencer can reach many people and influence them to like or dislike, to buy or skip buying, products and services. He is mostimportant figure in society.</p>
-               <button> Preebook now
-                <i class="fas fa-arrow-right new"></i>
+               <button> Preebook now &#xea5d; 
+                <i class="icofont-arrow-right new"></i>
                 </button>        
 
                 </div>
-                <div>
+                <div class="image">
                     <img src="main-camera.png" alt="">
                 </div>
           </div>
@@ -35,9 +37,10 @@
         <!-- collection -->
         <section class="container">
             <h2 class="main">Popular Collection</h2>
-        <div class="collections">
+        <article class="collections">
             <div class="collection">
                 <img src="tripod.png" alt="">
+                 <div class="price">
                 <h2>FLex Tripod</h2>
                 <p>$ 50.48</p>
                 <i class="fas fa-star filled"></i>
@@ -47,9 +50,11 @@
                 <i class="fas fa-star filled"></i>4.99
                 <p class="paragraph">Wordwide shifting available
                     Buyers protection possible!</p>
+                </div>
             </div>
             <div class="collection">
                 <img src="mic.png" alt="">
+                 <div class="price">
                 <h2>microphone</h2>
                 <p>$ 120.48</p>
                 <i class="fas fa-star filled"></i>
@@ -60,8 +65,10 @@
                 <p class="paragraph">Wordwide shifting available
                     Buyers protection possible!</p>
             </div>
+            </div>
             <div class="collection">
                 <img src="airpod.png" alt="">
+                 <div class="price">
                 <h2>Airbuds</h2>
                 <p>$ 100.00</p>
                 <i class="fas fa-star filled"></i>
@@ -72,8 +79,10 @@
                 <p class="paragraph">Wordwide shifting available
                     Buyers protection possible!</p>
             </div>
+            </div>
             <div class="collection">
                 <img src="drone.png" alt="">
+                <div class="price">
                 <h2>Drone</h2>
                 <p>$ 980.25</p>
                 <i class="fas fa-star filled"></i>
@@ -84,8 +93,10 @@
                 <p class="paragraph">Wordwide shifting available
                     Buyers protection possible!</p>
             </div>
+            </div>
             <div class="collection">
                 <img src="lights.png" alt="">
+                <div class="price">
                 <h2>Light Setup</h2>
                 <p>$1200</p>
                 <i class="fas fa-star filled"></i>
@@ -96,8 +107,10 @@
                 <p class="paragraph">Wordwide shifting available
                     Buyers protection possible!</p>
             </div>
+            </div>
             <div class="collection">
                 <img src="setup.png" alt="">
+                 <div class="price">
                 <h2>Photoshoot set</h2>
                 <p>$ 820.40</p>
                 <i class="fas fa-star filled"></i>
@@ -107,9 +120,11 @@
                 <i class="fas fa-star filled"></i>4.99
                 <p class="paragraph">Wordwide shifting available
                     Buyers protection possible!</p>
+            </div>
             </div>     
             <div class="collection">
                 <img src="camera.png" alt="">
+                <div class="price">
                 <h2>Vlogging Camera</h2>
                 <p>$ 1800.00</p>
                 <i class="fas fa-star filled"></i>
@@ -120,8 +135,10 @@
                 <p class="paragraph">Wordwide shifting available
                     Buyers protection possible!</p>
             </div>
+            </div>
             <div class="collection">
                 <img src="single-light.png" alt="">
+                 <div class="price">
                 <h2>Green Screen</h2>
                 <p>$ 50.48</p>
                 <i class="fas fa-star filled"></i>
@@ -132,8 +149,10 @@
                 <p class="paragraph">Wordwide shifting available
                     Buyers protection possible!</p>
             </div>
-            <div class="collection">
+             </div>
+             <div class="collection">
                 <img src="action.png" alt="">
+                <div class="price">
                 <h2>Action Camera</h2>
                 <p>$ 380.48</p>
                 <i class="fas fa-star filled"></i>
@@ -143,9 +162,10 @@
                 <i class="fas fa-star filled"></i>4.99
                 <p class="paragraph">Wordwide shifting available
                     Buyers protection possible!</p>
-            </div>
-        </div>
-        <p class="see">see more<i class="fas fa-arrow-right"></i></p>
+             </div>
+             </div>
+        </article>
+        <a href="">see more<i class="fas fa-arrow-right"></i></a>
         </section>
     </main>
     <footer>
